--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "assignment-1-break-out",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,15 @@
     "eslint": "^7.12.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chrismlee87/breakout-tutorial.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chrismlee87/breakout-tutorial/issues"
+  },
+  "homepage": "https://github.com/chrismlee87/breakout-tutorial#readme",
+  "description": ""
 }
